# DD4SHiP

./: CMakeLists.txt  Caloprototype.xml  SHiPCalo.xml  materials.xml  readHits_Full.C  steering.py  test.xml
Detectors/ECAL/: SplitCal.xml  SplitCalBars.xml
Detectors/HCAL/: HCALBars.xml
Detectors/PID/ECAL/: SplitCalBars.xml
Detectors/PID/HCAL/: HCAL.xml  HCALBars.xml
Detectors/PID/Prototypes/: ProtoECAL.xml  ProtoECALBars.xml  ProtoHCAL.xml  ProtoHCALBars.xml
scripts/: AutoDict_vector_dd4hep__sim__Geant4Calorimeter__Hit___cxx.d  AutoDict_vector_dd4hep__sim__Geant4Calorimeter__Hit___cxx_ACLiC_dict_rdict.pcm  dumb_digitisation.C
src/: Calo_HCAL_geo.cpp  LayerOfBars.cpp  SHiP_HPL_Fibres_geo.cpp  SandwichCaloOfBars_geo.cpp  SplitCal_HPLs_geo.cpp  SplitCal_ThinBars_geo.cpp  SplitCal_WideBars_basis_geo.cpp  SplitCal_geo.cpp
